--- a/ClientesProdutos.csproj
+++ b/ClientesProdutos.csproj
@@ -7,16 +7,18 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
-      <PackageReference Include="dapper" Version="2.0.123" />
-      <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
+        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1"/>
+        <PackageReference Include="dapper" Version="2.0.123"/>
+        <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1"/>
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Domain\Entities\" />
-      <Folder Include="Domain\Interfaces\" />
-      <Folder Include="Infrastructure\" />
-      <Folder Include="Interfaces\" />
+        <Folder Include="Domain\Entities\"/>
+        <Folder Include="Domain\Interfaces\"/>
+        <Folder Include="Infrastructure\"/>
+        <Folder Include="Interfaces\"/>
+        <Folder Include="Views\Clientes\"/>
+        <Folder Include="Views\Produtos\"/>
     </ItemGroup>
 
 </Project>
