--- a/ClientesProdutos.csproj
+++ b/ClientesProdutos.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
@@ -7,18 +7,19 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1"/>
-        <PackageReference Include="dapper" Version="2.0.123"/>
-        <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1"/>
+        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+        <PackageReference Include="dapper" Version="2.0.123" />
+        <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+        <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
     </ItemGroup>
 
     <ItemGroup>
-        <Folder Include="Domain\Entities\"/>
-        <Folder Include="Domain\Interfaces\"/>
-        <Folder Include="Infrastructure\"/>
-        <Folder Include="Interfaces\"/>
-        <Folder Include="Views\Clientes\"/>
-        <Folder Include="Views\Produtos\"/>
+        <Folder Include="Domain\Entities\" />
+        <Folder Include="Domain\Interfaces\" />
+        <Folder Include="Infrastructure\" />
+        <Folder Include="Interfaces\" />
+        <Folder Include="Views\Clientes\" />
+        <Folder Include="Views\Produtos\" />
     </ItemGroup>
 
 </Project>
