--- a/ClientesProdutos.csproj
+++ b/ClientesProdutos.csproj
@@ -4,13 +4,14 @@
         <TargetFramework>net6.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <UserSecretsId>2ab92cab-b57f-400e-8d9f-33437627124a</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
         <PackageReference Include="dapper" Version="2.0.123" />
         <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
-        <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
+        <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="3.21.100" />
     </ItemGroup>
 
     <ItemGroup>
